--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fallout: Пловген</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/vault-icon.png" type="image/png">
+  <meta charset="UTF-8">
+  <title>Fallout: Пловген</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="game-container">
-        <h1 class="title">Fallout: Пловген</h1>
-        <div id="scene-image"></div>
-        <div id="scene-text" class="text-box"></div>
-        <div id="choices" class="choices"></div>
-    </div>
-    <script src="js/scenes.js"></script>
-    <script src="js/script.js"></script>
+  <div id="game"></div>
+  <script src="script.js"></script>
 </body>
 </html>
